# misc-benchmarks

./: Cargo.toml  README.md
benches/: bcrypt_benchmark.rs  osu_benchmark.rs
