[package]
name = "misc-benchmarks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21.1", features = ["full"] }
bcrypt = "0.13.0"
rayon = "1.5.3"
rand = "0.8.5"
[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "bcrypt_benchmark"
harness = false